add markup in modal

--- a/portfolio.html
+++ b/portfolio.html
@@ -303,6 +303,18 @@
               </ul>
             </div>
           </div>
+          <div class="container-form-footer">
+            <p class="text-form-footer">Підпишіться на розсилку</p>
+            <form name="subscribe-form">
+              <input class="form-input-footer" type="email" name="email" placeholder="E-mail" />
+              <button class="button-form-footer" type="submit">
+                Підписатися
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
