--- a/index.html
+++ b/index.html
@@ -438,20 +438,56 @@
           <div class="container-form-footer">
             <p class="text-form-footer">Підпишіться на розсилку</p>
             <form name="subscribe-form">
-             
+              <input class="form-input-footer" type="email" name="email" placeholder="E-mail" />
+              <button class="button-form-footer" type="submit">
+                Підписатися
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
             </form>
-            </div>
           </div>
         </div>
       </div>
     </footer>
-    <div data-modal class="backdrop is-hidden">
+    <div data-modal class="backdrop">
       <div class="modal">
-        <button data-modal-close class="modal-close-button">
+        <button data-modal-close class="modal-close-button" type="submit">
           <svg width="18" height="18">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <h2 class="title-modal">Залиште свої дані, ми вам передзвонимо</h2>
+        <form name="contact-form">
+          <label class="form-label" for="person-name">Ім'я</label>
+          <div class="form-control">
+            <input class="form-input" id="person-name" type="text" name="person-name" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="person-phone">Телефон</label>
+          <div class="form-control">
+            <input class="form-input" id="person-phone" type="tel" name="person-phone" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="person-mail">Пошта</label>
+          <div class="form-control">
+            <input class="form-input" id="person-mail" type="email" name="person-mail" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+          <label class="form-label" for="person-comment">Коментар</label>
+          <textarea
+            class="form-textarea"
+            name="person-comment"
+            id="person-comment"
+            placeholder="Введіть текст"
+          ></textarea>
+        </form>
       </div>
     </div>
     <script src="./modal.js"></script>
