--- a/index.html
+++ b/index.html
@@ -487,6 +487,17 @@
             id="person-comment"
             placeholder="Введіть текст"
           ></textarea>
+
+          <input
+            class="checkbox-input visually-hidden"
+            id="terms-ckeckbox"
+            name="terms-ckeckbox"
+            type="checkbox"
+          />
+          <label class="checkbox-label" for="terms-ckeckbox"
+            >Погоджуюся з розсилкою та приймаю
+            <a href="#">Умови договору</a>
+          </label>
         </form>
       </div>
     </div>
