--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           <div class="form-control">
             <input class="form-input" id="person-name" type="text" name="person-name" />
             <svg class="form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-person"></use>
+              <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
           </div>
           <label class="form-label" for="person-phone">Телефон</label>
@@ -473,11 +473,11 @@
               <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
           </div>
-          <label class="form-label" for="person-mail">Пошта</label>
+          <label class="form-label" for="person-mail-black">Пошта</label>
           <div class="form-control">
             <input class="form-input" id="person-mail" type="email" name="person-mail" />
             <svg class="form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-email"></use>
+              <use href="./images/icons.svg#icon-email-black"></use>
             </svg>
           </div>
           <label class="form-label" for="person-comment">Коментар</label>
@@ -487,16 +487,12 @@
             id="person-comment"
             placeholder="Введіть текст"
           ></textarea>
-
-          <input
-            class="checkbox-input visually-hidden"
-            id="terms-ckeckbox"
-            name="terms-ckeckbox"
-            type="checkbox"
-          />
-          <label class="checkbox-label" for="terms-ckeckbox"
-            >Погоджуюся з розсилкою та приймаю
-            <a href="#">Умови договору</a>
+          <label class="field">
+            <input class="checkbox" type="checkbox" name="topic" />
+            <span class="modal-icon"></span>
+            <span class="text-modal">
+              Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a>
+            </span>
           </label>
         </form>
       </div>
