--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         </div>
       </div>
     </footer>
-    <div data-modal class="backdrop">
+    <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button data-modal-close class="modal-close-button" type="submit">
           <svg width="18" height="18">
@@ -494,6 +494,7 @@
               Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a>
             </span>
           </label>
+          <button class="button-modal" type="submit">Відправити</button>
         </form>
       </div>
     </div>
