--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
               <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
           </div>
-          <label class="form-label" for="person-mail-black">Пошта</label>
+          <label class="form-label" for="person-mail">Пошта</label>
           <div class="form-control">
             <input class="form-input" id="person-mail" type="email" name="person-mail" />
             <svg class="form-icon" width="18" height="18">
