--- a/index.html
+++ b/index.html
@@ -491,7 +491,8 @@
             <input class="checkbox" type="checkbox" name="topic" />
             <span class="modal-icon"></span>
             <span class="text-modal">
-              Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a>
+              Погоджуюся з розсилкою та приймаю
+              <a class="text-modal-conditions" href="#">Умови договору</a>
             </span>
           </label>
           <button class="button-modal" type="submit">Відправити</button>
